--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "neo4j-driver": "^5.26.0",
     "node-fetch": "^3.3.2",
+    "simpleheat": "^0.4.0",
     "uuid": "^11.0.2"
   }
 }
