--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ PORT=3000
 DOMAIN=localhost
 NODE_ENV=production
 
+# API Security
+API_KEY=your-secret-api-key-here
+
 # GCP Application Deployment Configuration
 GCP_PROJECT_ID=your-gcp-project-id
 GCP_REGION=europe-north1
