--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.17.1",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "neo4j-driver": "^5.26.0",
     "node-fetch": "^3.3.2",
+    "path-to-regexp": "^0.1.12",
     "simpleheat": "^0.4.0",
     "uuid": "^11.0.2"
   }
