--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "@types/google-cloud__storage": "^1.7.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.1",
     "dotenv": "^16.4.7",
@@ -25,6 +26,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.17.2",
     "ejs": "^3.1.10",
     "express": "^4.17.1",
     "multer": "^2.0.2",
